Signed-off-by: SibeiLinmu <1534459651@qq.com>

--- a/TCPCommunicationClient/TCPCommunicationClient.csproj
+++ b/TCPCommunicationClient/TCPCommunicationClient.csproj
@@ -36,7 +36,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>校徽 %281%29.ico</ApplicationIcon>
+    <ApplicationIcon>Terra.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -88,6 +88,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Terra.ico" />
     <Content Include="校徽 %281%29.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
